--- a/index.css
+++ b/index.css
@@ -1,4 +1,7 @@
 *{box-sizing: border-box;}
+.clear:before,.clear:after{content:" ";display:table;}
+.clear:after{clear:both;}
+}
 /***************************************************************************
 **********************************picRow02**********************************
 ***************************************************************************/
@@ -40,6 +43,64 @@
 }
 .picRow02 li .picBox img{width:100%;height: 100%;}
 .productBox{padding-top: 36px;}
+
+
+
+/***************************************************************************
+**********************************pirRow03**********************************
+***************************************************************************/
+.picRow03_wrapper{
+	overflow: hidden;
+	width:217px;
+	margin:0 auto;
+}
+.picRow03{
+	width:100%;
+	height: 95px;
+	white-space: nowrap;overflow: hidden;
+	margin-top: 16px;}
+.picRow03 ul{
+	overflow: visible;
+	font-size:0px;/*li间有空隙*/
+	display: block;
+	height: 100%;
+}
+.picRow03 li{
+	font-size:15px;
+	display: inline-block;
+    width: 240px;
+    height: 100%;
+    border:1px solid #E9E6E6;
+}
+.picRow03 li>div{float: left;position: relative;}
+.picRow03 li .picBox{
+	height: 100%;
+	width:92px;
+}
+.picRow03 li .textBox{
+	white-space: normal;
+	width: 145px;
+	padding: 25px 20px;
+	height: 100%;
+	color: #000;
+}
+.picRow03 li .textBox .textRow{
+	display: block;
+    text-align: left;
+    line-height: 23px;
+}
+.picRow03 li .textBox .textRow.price{
+	color:#f7a244;font-size: 16px;
+
+}
+.picRow03 li .picBox img{width:100%;height: 100%;}
+.productBox{padding-top: 36px;}
+
+/***************************************************************************
+**********************************pirRow03end**********************************
+***************************************************************************/
+
+
 
 /***************************************************************************
 **********************************brandPic01**********************************
