--- a/index.css
+++ b/index.css
@@ -88,13 +88,14 @@
 	display: block;
     text-align: left;
     font-size: 10px;
-    line-height: 17px;
+    line-height: 20px;
+    margin-top: 4px;
 }
 .picRow03 li .textBox .textRow.name{
 	color: #f7a244;
-    font-size: 15px;
+    font-size: 16px;
     height: 20px;
-    line-height: 11px;
+    line-height: 10px;
 	
 }
 .picRow03 li .picBox img{width:100%;height: 100%;}
