--- a/index.css
+++ b/index.css
@@ -1,4 +1,10 @@
 *{box-sizing: border-box;}
+.wrapper{
+  padding: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  border:4px solid #1B75F0;
+}
 .clear:before,.clear:after{content:" ";display:table;}
 .clear:after{clear:both;}
 }
