--- a/css/frame.css
+++ b/css/frame.css
@@ -3,6 +3,8 @@
 	font-size: 20px;
 	font-weight: 700;
 }
+.box{height:100%;text-align: center;}
+
 /*color*/
 .white{color:#fff;}
 .blue{color: #0c8ae1;}
