--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,6 @@
 *{box-sizing: border-box;margin:0;padding:0;}
 a{text-decoration: none;cursor: pointer;}
-a:visited{color:#000;}
+/*a:visited{color:inherit;}*/
 ul{list-style: none;}
 
 
