--- a/css/frame.css
+++ b/css/frame.css
@@ -8,4 +8,6 @@
 /*color*/
 .white{color:#fff;}
 .blue{color: #0c8ae1;}
+.orange{color:#ff8702;}
+.gray{color:#C2C1C1;}
 .bg-black{background:#0f1014;}
