--- a/css/button.css
+++ b/css/button.css
@@ -1,23 +1,20 @@
 .btnRow{position: relative;}
-.rb-btn{
-	display: block;
-    cursor: pointer;
-    position: absolute;
-    right: 0;
-    background: #fff;
-    text-align: right;
-    line-height: 28px;
+.button{cursor: pointer;}
+
+.r-btn{
+	float: right;
 }
 
 .heart-btn{
-	text-align: center;
 	display: inline-block;
 }
-.heart{
+.heart-btn .heart{
 	display: block;
 	animation: pound 2.5s infinite;
 	transform-origin: center;
 }
 @keyframes pound {
 	50% { transform: scale(1.1); }
-}
+}	
+
+.btn-s{font-size: 13px;}
