--- a/css/frame.css
+++ b/css/frame.css
@@ -15,3 +15,8 @@
 .bg-gray{background:#e1e9f6;}
 .bg-blue{background:#1978cf;}
 .bg-black{background:#0f1014;}
+.bg-yellow{background: #ffae00;}
+.bg-pink{background:#ec5369;}
+
+.float-r{float: right;}
+.float-l{float: left;}
