--- a/css/base.css
+++ b/css/base.css
@@ -2,10 +2,15 @@
 a{text-decoration: none;cursor: pointer;}
 /*a:visited{color:inherit;}*/
 ul{list-style: none;}
-body{font-family: "Helvetica Neue", Helvetica, 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', Arial,sans-serif;}
+body{font-family: "Helvetica Neue", Helvetica, 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', Arial,sans-serif;overflow-x: hidden;}
 input{border:none;}
 
-.container1200{width:1200px;margin:0 auto;}
+.container1200{
+	width:1200px;margin:0 auto;
+	padding-right: 15px;
+    padding-left: 15px;
+    
+}
 .line{
 	margin:0 -15px;
 }
