--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,7 @@
 .headRow{padding:10px 0;border-bottom:1px solid #ddd;margin-bottom: 10px;}
+
+/*定制layer.js插件的skin即特定的样式*/
+.demo-class .layui-layer-content{
+		padding-right: 15px;
+    	padding-left: 15px;
+}
