--- a/css/index.css
+++ b/css/index.css
@@ -4,9 +4,12 @@
 .demo-class .layui-layer-content{
 		padding:20px 15px;
 }
+
 .hcj.line{height: 100%}
+.hcj #html,.hcj #css,.hcj #js{border:1px solid #DBD9D9;border-top: none;height: 100%;}
+
 .line>.block{height: 100%;}
 .hcj.line>.block>.line{height: 50%;}
 
-.hcj .title{background:#ddd;color:black;padding:5%;}
-.hcj .content{border:1px solid #A19E9F;height:90%;overflow: scroll;border-top: none;}
+.hcj .title{background:#ddd;color:black;padding: 6px 10px;}
+.hcj .content{overflow: auto;}
