--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,8 @@
 .headRow{padding:10px 0;border-bottom:1px solid #ddd;margin-bottom: 10px;}
-
+.tag{margin-left: 7px;}
 /*定制layer.js插件的skin即特定的样式*/
 .demo-class .layui-layer-content{
-		padding:20px 15px;
+		
 }
 
 .hcj.line{height: 100%}
