--- a/css/base.css
+++ b/css/base.css
@@ -5,6 +5,9 @@ ul{list-style: none;}
 body{font-family: "Helvetica Neue", Helvetica, 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', Arial,sans-serif;overflow-x: hidden;}
 input{border:none;}
 
+.container-p-15{
+	padding: 15px;
+}
 .container1200{
 	width:1200px;margin:0 auto;
 	padding-right: 15px;
@@ -20,12 +23,13 @@ input{border:none;}
 .block-4{width:25%;}
 .box{padding:10px;}
 
+.container-auto:before,.container-auto:after,
 .container1200:before,.container1200:after,
 .line:before,.line:after,
 .block:before,.block:after{
 	content:" ";display:table;	
 }
-.container1200:after,
+.container-auto:after,
 .line:after,
 .block:after{
 	clear:both;
