--- a/css/button.css
+++ b/css/button.css
@@ -34,6 +34,11 @@
 .input-set input.button{width:28%;}
 .input-set-l{height: 48px;}
 
+.more {
+    z-index: 99;
+    position: relative;
+}
+
 
 
     
