--- a/css/frame.css
+++ b/css/frame.css
@@ -4,11 +4,56 @@
 	font-weight: 700;
 }
 
-.box{height:100%;text-align: center;}
+.container-p-15{
+	padding: 15px;
+}
+.container1000 {
+    width: 1000px;
+    margin: 0 auto;
+}
+.container1200{
+	width:1200px;margin:0 auto;
+	padding-right: 15px;
+    padding-left: 15px;    
+}
+.line{
+	margin:0 -15px;
+}
+.block-1{width:100%;}
+.block-2{width:50%;}
+.block-3{width:33.3333333333%;}
+.block-4{width:25%;}
+.box{padding:10px;}
+
+.container-auto:before,.container-auto:after,
+.container1200:before,.container1200:after,
+.line:before,.line:after,
+.block:before,.block:after{
+	content:" ";display:table;	
+}
+.container-auto:after,
+.line:after,
+.block:after{
+	clear:both;
+}
+
+.full-width{width:100%;}
+.extend-width{margin: 0 -9999px;padding: 0 9999px;}
+
+.hide{display: none;}
+
+.clear:before,.clear:after{content:" ";display:table;}
+.clear:after{clear:both;}
+.block{
+	padding-left:15px;padding-right: 15px;float: left;position: relative;
+	min-height: 1px;
+}
+
 
 /*color*/
 .white{color:#fff;}
 .blue{color:#0c8ae1;}
+.green {color: #6eb92b;}
 .orange{color:#ff8702;}
 .gray{color:#C2C1C1;}
 .black{color:#333;}
@@ -22,3 +67,29 @@
 
 .float-r{float: right;}
 .float-l{float: left;}
+
+
+.padding-15{padding-left: 15px;padding-right: 15px;}
+.padding-37{padding-left:37px;padding-right:37px;}
+.padding-r-25{padding-right: 25px;}
+
+
+.padding-l-64{padding-left: 64px;}
+
+.marin-t-7{margin-top: 7px;}
+.margin-r-328{margin-right: 328px;}
+.margin-r-350{margin-right:350px}
+.margin-r-360{margin-right:360px}
+
+.margin-l-40{margin-left: 40px}
+.margin-l-150{margin-left: 150px;}
+.margin-l-165{margin-left: 165px;}
+.margin-l-168{margin-left: 168px;}
+.margin-l-185{margin-left: 185px;}
+.margin-l-200{margin-left: 200px;}
+.margin-l-226{margin-left: 226px;}
+.margin-l-240{margin-left: 240px;}
+.margin-l-265{margin-left: 265px}
+.margin-l-300{margin-left: 300px}
+.margin-l-308{margin-left: 308px}
+.margin-l-493{margin-left: 493px}
