--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,7 @@
 
 .hcj .title{background:#ddd;color:black;padding: 6px 10px;}
 .hcj .content{
-	overflow: auto;
+	max-height: 250px;
+    overflow: auto;
 	padding:20px;
 }
