--- a/css/frame.css
+++ b/css/frame.css
@@ -63,7 +63,7 @@
 .bg-black{background:#0f1014;}
 .bg-yellow{background: #ffae00;}
 .bg-pink{background:#ec5369;}
-
+.bg-green {background: #6eb92b;}
 
 .float-r{float: right;}
 .float-l{float: left;}
