--- a/css/barHeader.css
+++ b/css/barHeader.css
@@ -6,6 +6,7 @@
     line-height: 34px;
     font-size: 12px;
     background-color: rgb(243,243,243);
+    text-align: left;
 }
 .g-topbar span.title-g {
     margin-left: 0;
@@ -17,11 +18,9 @@
 /*g-topbar01 end*/
 
 /*导航栏navbar-line01 start*/
-.navbar-line{
-/*margin:0 -37px;*/
-}
+.navbar-line01{}
 
-.navbar-block{
+.navbar-line01 .navbar-block{
 	
 	float: left;position: relative;
 
@@ -32,35 +31,21 @@
 
 	display: block;
 }
-.navbar-block a.navLink{
+.navbar-line01 .navbar-block a.navLink{
 	display: block;
 	padding:13px 37px;
 
 }
-.navbar-block .naver_0{
+.navbar-line01 .navbar-block .naver_0{
 	display: none;
     position: absolute;
     z-index: 99;
     padding-top: 10px;
-	
-	
 }
-.navbar-block.on,.navbar-block:hover{background: #fff;color:#6eb92b;}
+.navbar-line01 .navbar-block.on,.navbar-block:hover{background: #fff;color:#6eb92b;}
 
-.navbar-block .naver_0 .nav_erc{
-	color:#6eb92b;
-	
-    background-color: #ecf8fc;
-    background-color: rgba(236,248,252,.9);
-    text-align: center;
-}
-.navbar-block .naver_0 .nav_erc li {
-
-    padding-top: 3px;
-    left: 0;
-}
-.navbar-block .naver_0 .nav_erc{
-	color: #6eb92b;
+.navbar-line01 .navbar-block .naver_0 .nav_erc{
+    color: #6eb92b;
     background-image: url(../img/navBarbg.png) ;
     background-repeat: no-repeat;
     background-color: transparent;
@@ -68,44 +53,94 @@
     width: 404px;
     height: 99px;
     padding: 15px;
-  	box-sizing: content-box;	
+    box-sizing: content-box;    
 }
-.navbar-block .naver_0 .nav_erc .navBox01,
-.navbar-block .naver_0 .nav_erc .navBox01Pic,
-.navbar-block .naver_0 .nav_erc .navBox01Pic a,
-.navbar-block .naver_0 .nav_erc .navBox01Link{display: block;height: 100%;}
-.navbar-block .naver_0 .nav_erc .navBox01Link .linkWrapper{
+
+.navbar-line01 .navbar-block .naver_0 .nav_erc li {
+    padding-top: 3px;
+    left: 0;
+}
+
+.navbar-line01 .navbar-block .naver_0 .nav_erc .navBox01,
+.navbar-line01 .navbar-block .naver_0 .nav_erc .navBox01Pic,
+.navbar-line01 .navbar-block .naver_0 .nav_erc .navBox01Pic a,
+.navbar-line01 .navbar-block .naver_0 .nav_erc .navBox01Link{display: block;height: 100%;}
+.navbar-line01 .navbar-block .naver_0 .nav_erc .navBox01Link .linkWrapper{
 	display: table-cell;
     vertical-align: middle;
     height: 104px;
     text-align: left;
 }
-.navbar-block .naver_0 .nav_erc .navBox01Link .linkContent{padding-left: 15px}
+.navbar-line01 .navbar-block .naver_0 .navBox01Link .linkContent{padding-left: 15px}
 
-.navbar-block .naver_0 .nav_erc .navBox01Link .linkContent .navLi{
+.navbar-line01 .navbar-block .naver_0 .navBox01Link .linkContent .navLi{
 	display: block;
     float: left;
     background: url(../img/nav-lb.png) no-repeat 0px 53%;
     font-size: 12px;
     padding: 7px 0;
 }
-.navbar-block .naver_0 .nav_erc .navBox01Link .linkContent .navLi:hover{background-image: none;}
-.navbar-block .naver_0 .nav_erc .navBox01Link .linkContent .navLi:hover a{
+.navbar-line01 .navbar-block .naver_0 .linkContent .navLi:hover{background-image: none;}
+.navbar-line01 .navbar-block .naver_0 .linkContent .navLi:hover a{
 	background:#6eb92b;
 	color: #fff;	
 }
 
-.navbar-block .naver_0 .nav_erc .navBox01Link .linkContent .navLi a{padding: 0px 10px;}
-.navbar-block .naver_0 .nav_erc .navBox01Link .linkContent .navLi.nvali-l{width: 150px;}
-.navbar-block .naver_0 .nav_erc .navBox01Link .linkContent .navLi.nvali-r{}
-.navbar-block .naver_0 .nav_erc li {
-
+.navbar-line01 .navbar-block .naver_0 .nav_erc  .navLi a{padding: 0px 10px;}
+.navbar-line01 .navbar-block .naver_0 .nav_erc  .navLi.nvali-l{width: 150px;}
+.navbar-line01 .navbar-block .naver_0 .nav_erc  .navLi.nvali-r{}
+.navbar-line01 .navbar-block .naver_0 .nav_erc li {
 	padding: 5px 45px;
 }
-.navbar-block .naver_0 .nav_erc li:hover{background-color: #6eb92b;}
-.navbar-block .naver_0 .nav_erc li:hover a{color: #fff;}
-.navbar-block .naver_0 .nav_erc li a{
+.navbar-line01 .navbar-block .naver_0 .nav_erc li:hover{background-color: #6eb92b;}
+.navbar-line01 .navbar-block .naver_0 .nav_erc li:hover a{color: #fff;}
+.navbar-line01 .navbar-block .naver_0 .nav_erc li a{
 	white-space: nowrap;
-
 }
 /*导航栏navbar-line01 end*/
+
+
+/*导航栏navbar-line02 start*/
+.navbar-line02{}
+.navbar-line02 .navbar-block{
+    float: left;
+    position: relative;
+    min-height: 1px;
+    cursor: pointer;
+    font-size:14px;
+    position: relative;
+    display: block;
+}
+.navbar-line02 .navbar-block a.navLink{
+    display: block;
+    padding:13px 37px;
+}
+.navbar-line02 .navbar-block .naver_0{
+    display: none;
+    position: absolute;
+    z-index: 99;
+    top: 48px;
+    padding-top: 10px;
+    background: url(../img/topTri.png) no-repeat 50% 5px;
+    left: -6%;
+}
+
+.navbar-line02 .navbar-block .naver_0 .nav_erc{
+    background-color: #ecf8fc;
+    opacity: .9;
+    filter:alpha(opacity=90);
+    text-align: center;    
+}
+
+.navbar-line02 .navbar-block.on,.navbar-block:hover{background: #fff;color:#6eb92b;}
+.navbar-line02 .navbar-block .naver_0 .nav_erc li {
+    padding: 5px 45px;
+}
+
+.navbar-line02 .navbar-block .naver_0 .nav_erc li:hover{background-color: #6eb92b;}
+.navbar-line02 .navbar-block .naver_0 .nav_erc li:hover a{color: #fff;}
+.navbar-line02 .navbar-block .naver_0 .nav_erc li a{
+    white-space: nowrap;
+    color: #6eb92b;
+}
+/*导航栏navbar-line02 end*/
