--- a/css/button.css
+++ b/css/button.css
@@ -2,9 +2,10 @@
 .button{cursor: pointer;}
 .button .icon{vertical-align: middle;}
 
-
+/*heart-btn start*/
 .heart-btn{
 	display: inline-block;
+    text-align: center;
 }
 .heart-btn .heart{
 	display: block;
@@ -14,6 +15,7 @@
 @keyframes pound {
 	50% { transform: scale(1.1); }
 }	
+/*heart-btn end*/
 
 .btn-r-m{
 	padding: 0 13px;
@@ -39,6 +41,20 @@
     position: relative;
 }
 
+/*btn-num01 start*/
+.btn-num01{
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
+    text-align: center;
+    border-radius: 50%;
+    font-size: 12px;
+    background-color: #8fc85d;
+    color: #fff;
+    display: inline-block;
+}
+.btn-num01:active{background-color: #69A237;}
+/*btn-num01 end*/
 
 
     
