--- a/css/frame.css
+++ b/css/frame.css
@@ -61,6 +61,7 @@
 
 .bg-gray{background:#e1e9f6;}
 .bg-blue{background:#1978cf;}
+.bg-blue03{background-color: #1978cf;}
 .bg-black{background:#0f1014;}
 .bg-yellow{background: #ffae00;}
 .bg-pink{background:#ec5369;}
