--- a/css/frame.css
+++ b/css/frame.css
@@ -4,6 +4,13 @@
 	font-weight: 700;
 }
 
+
+.ellipsis{
+  display:inline-block;*display:inline;zoom:1;text-align:center;
+  max-width:100%;line-height:100%;
+  overflow: hidden;white-space: nowrap;text-overflow: ellipsis;
+}
+.img-center{position:absolute;top:0;bottom:0;right:0;left:0;max-height:100%;max-width:100%;*height:100%;*width:100%;margin:auto;}
 .container-p-15{
 	padding: 15px;
 }
