--- a/css/mobile.css
+++ b/css/mobile.css
@@ -86,6 +86,7 @@
 /*m-navbar-01 end		*/
 
 /*m-iconLink01 start*/
+.m-iconLink01  .link-zone{padding-right: 5px; padding-left: 5px;}
 .m-iconLink01  .link-zone:nth-child(1) .link-wrapper .Linkpic{background-color: #005bac}
 .m-iconLink01  .link-zone:nth-child(2) .link-wrapper .Linkpic{background-color: #379fa0}
 .m-iconLink01  .link-zone:nth-child(3) .link-wrapper .Linkpic{background-color: #fdb111}
@@ -171,3 +172,36 @@ margin-top: 100%; /* margin 百分比相对父元素宽度计算 */
     text-align: center;
     padding: 6px .7rem;
 }
+
+/*typeRow start*/
+.m-testRange01 .typeRow {
+    margin-top: 1rem;
+    position: relative;
+    height: 7rem;
+    display: block;
+    color: #4b4b4b;
+}
+.m-testRange01 .typeRow .typePic{
+    width: 40%;
+    height: 100%;
+}
+.m-testRange01 .typeRow .typePic img {
+    height: 100%;
+    width: 100%;
+}
+.m-testRange01 .typeRow .typeName {
+    width: 60%;
+    text-align: center;
+    background-color: #eaf7ff;
+    height: 100%;
+}
+.middleTable{
+    display: table;
+}
+.middleTable .middleRow {
+    display: table-cell;
+    vertical-align: middle;
+    line-height: 30px;
+}
+
+/*typeRow end*/
